# sport-bot

./: .change_scope  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  generate_pages.py  news-6074218-i-v-pir-i-v-mir-domashnij-halat-stal-neozhidannym-modnym-trendom.html  news-6074234-blogersha-nazvala-zhenskuyu-vesch-kotoraya-otpugivaet-muzhchin-i-vyzvala-spory-v-seti.html  news-6079948-pszh-real-nazvan-samyj-veroyatnyj-schyot.html  news-6079970-zenit-son-stal-izvesten-samyj-veroyatnyj-schyot.html  news-6080672-114-letnyaya-pensionerka-nazvala-produkt-kotoryj-vsegda-vklyuchaet-v-svoj-racion.html  news-6080708-aek-partizan-nazvan-favorit-matcha-kvalifikacii-ligi-evropy.html  news-6081002-murtazaliev-kanelo-krouford-i-blizko-ne-boj-veka.html  news-6081248-ne-pitajte-nadezhd-v-indiane-vyskazalis-o-propuske-halibyortonom-sleduyuschego-sezona-nba.html  news-6081266-stali-izvestny-usloviya-vozmozhnogo-perehoda-karrerasa-v-real.html.html  news-6081268-yan-nepomnyaschij-opublikoval-detskoe-foto-v-pamyat-o-materi.html  news-6081270-trener-maddaleny-ocenil-shansy-topurii-pobedit-mahacheva.html.html  news-6081272-vospitannik-fluminense-zhoao-pedro-vyskazalsya-o-duble-za-chelsi-v-vorota-rodnogo-kluba.html  news-6081274-stal-izvesten-eschyo-odin-klub-zainteresovannyj-v-transfere-chempiona-mira-de-paulya.html  news-6081276-golden-stejt-uorriorz-majami-hit-rezultat-matcha-9-iyulya-2025-schet-79-93-letnyaya-liga-nba-2025.html  news-6081278-samolyot-reala-ne-mog-prizemlitsya-v-nyuarke-neskolko-chasov-iz-za-shtorma.html  news-6081278-samolyot-reala-ne-mog-prizemlitsya-v-nyuarke-neskolko-chasov-iz-za-shtorma.html.html  news-6081280-nakonec-to-u-nas-poslednyaya-igra-sezona-enco-mareska-o-vyhode-chelsi-v-final-kchm-2025.html  news-6081280-nakonec-to-u-nas-poslednyaya-igra-sezona-enco-mareska-o-vyhode-chelsi-v-final-kchm-2025.html.html  news-6081282-donald-tramp-posetit-finalnyj-match-klubnogo-chempionata-mira.html  news-6081282-donald-tramp-posetit-finalnyj-match-klubnogo-chempionata-mira.html.html  news-6081284-torpedo-vidimo-vsyo-kommentator-pojda-o-sudejskom-skandale-s-uchastiem-avtozavodcev.html  news-6081284-torpedo-vidimo-vsyo-kommentator-pojda-o-sudejskom-skandale-s-uchastiem-avtozavodcev.html.html  news-6081288-mihail-mossakovskij-predpolozhil-kto-mozhet-zamenit-torpedo-v-rpl.html  news-6081296-sergej-tkachyov-otvetil-na-vopros-planiruet-li-prodolzhat-futbolnuyu-kareru.html  news-6081298-zhene-govoryu-chto-vsyo-normalno-hotya-kakoe-normalno-tkachyov-ob-uhode-iz-arsenala.html  news-6081300-sportivnogo-kommentatora-rabadanova-prigovorili-k-uslovnomu-sroku-za-noshenie-granaty.html  news-6081306-gasilin-rasskazal-kakim-budet-sostav-zenita-v-tovarischeskom-matche-so-sonom.html  news-6081308-liderom-budet-gasilin-o-batrakove-v-sleduyuschem-sezone.html  news-6081310-iga-shvyontek-vpervye-v-karere-vyshla-v-chetvertfinal-na-vseh-tryoh-pervyh-tbsh-odnogo-sezona.html  news-6081314-insajder-nameknul-na-skrytyj-konflikt-lebrona-dzhejmsa-s-rukovodstvom-lejkers.html  (+251 more)
.github/: release-drafter.yml
bot/: __init__.py  edit.py  main.py  publish.py  publisher.py  schedule.py  scheduler.py  sender.py
categorizer/: alias_mapper.py  assign_entities.py  db_tags.py  normalize.py  tag_typing.py  tag_utils.py
cluster/: __init__.py  antidup.py  build.py  fingerprints.py  refresh_titles.py  title_refiner.py
database/: prosport_db.py
(+102 files in other folders)
